--- a/air-crashes.ipynb
+++ b/air-crashes.ipynb
@@ -2107,7 +2107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -2167,14 +2167,88 @@
        "1900  SÃO PAULO  SP  BRASIL        2007-07-17             FINALIZADA         1  "
       ]
      },
-     "execution_count": 72,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Linha da ocorrência gerada devido ao acidente do Airbus A-320#Linha da \n",
+    "# Linha da ocorrência gerada devido ao acidente do Airbus A-320#Linha da \n",
     "ocorrencia[ocorrencia['CÓDIGO DA OCORRÊNCIA'] == 29859]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CÓDIGO DA OCORRÊNCIA</th>\n",
+       "      <th>CLASSIFICAÇÃO</th>\n",
+       "      <th>TIPO DE OCORRÊNCIA</th>\n",
+       "      <th>LOCALIDADE</th>\n",
+       "      <th>UF</th>\n",
+       "      <th>PAÍS</th>\n",
+       "      <th>DIA DA OCORRÊNCIA</th>\n",
+       "      <th>STATUS DA INVESTIGAÇÃO</th>\n",
+       "      <th>CONTAGEM</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>855</th>\n",
+       "      <td>30375</td>\n",
+       "      <td>ACIDENTE</td>\n",
+       "      <td>COLISÃO DE AERONAVES EM VOO</td>\n",
+       "      <td>PEIXOTO DE AZEVEDO</td>\n",
+       "      <td>MT</td>\n",
+       "      <td>BRASIL</td>\n",
+       "      <td>2006-09-29</td>\n",
+       "      <td>FINALIZADA</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     CÓDIGO DA OCORRÊNCIA CLASSIFICAÇÃO           TIPO DE OCORRÊNCIA  \\\n",
+       "855                 30375      ACIDENTE  COLISÃO DE AERONAVES EM VOO   \n",
+       "\n",
+       "             LOCALIDADE  UF    PAÍS DIA DA OCORRÊNCIA STATUS DA INVESTIGAÇÃO  \\\n",
+       "855  PEIXOTO DE AZEVEDO  MT  BRASIL        2006-09-29             FINALIZADA   \n",
+       "\n",
+       "     CONTAGEM  \n",
+       "855         1  "
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ocorrencia[ocorrencia['CÓDIGO DA OCORRÊNCIA'] == 30375]"
    ]
   },
   {
